--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
   "name": "deakin-react",
-  "version": "0.1.0",
+  "version": "0.0.1",
   "private": true,
   "dependencies": {
     "react": "^16.6.1",
     "react-dom": "^16.6.1",
-    "react-scripts": "2.1.1"
+    "react-scripts": "2.1.1",
+    "express": "4.15.x",
+    "cfenv": "1.0.x",
+    "react-router-dom": "^4.3.1",
+    "materialize-css": "^1.0.0-rc.2"
   },
   "scripts": {
     "start": "react-scripts start",
