--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
+    "cfenv": "1.0.x",
+    "express": "^4.16.4",
+    "materialize-css": "^1.0.0-rc.2",
     "react": "^16.6.1",
     "react-dom": "^16.6.1",
-    "react-scripts": "2.1.1",
-    "express": "4.15.x",
-    "cfenv": "1.0.x",
     "react-router-dom": "^4.3.1",
-    "materialize-css": "^1.0.0-rc.2"
+    "react-scripts": "2.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
