--- a/manifest.yml
+++ b/manifest.yml
@@ -2,6 +2,6 @@
 path: build/
 memory: 64M
 instances: 1
-domain: mybluemix.net
+domain: au-syd.mybluemix.net
 disk_quota: 1024M
 buildpack: https://github.com/cloudfoundrycommunity/staticfile-buildpack.git
