--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "materialize-css": "^1.0.0-rc.2",
     "react": "^16.6.1",
     "react-dom": "^16.6.1",
-    "react-router": "^4.3.1",
+    "react-redux": "^5.1.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
+    "redux": "^4.0.1",
+    "redux-axios-middleware": "^4.0.0",
     "socket.io-client": "^2.1.1"
   },
   "scripts": {
