Environment: Pick path from .env files

--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 NODE_PATH=src/
-BASE_URL='http://35.163.217.253:8000/api/'
+# Preprending with REACT_APP_ is important, 
+# source: https://facebook.github.io/create-react-app/docs/adding-custom-environment-variables
+REACT_APP_BASE_URL="http://52.42.15.246:8000/api/"
