--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 NODE_PATH=src/
 # Preprending with REACT_APP_ is important, 
 # source: https://facebook.github.io/create-react-app/docs/adding-custom-environment-variables
-REACT_APP_BASE_URL="http://52.42.15.246:8000/api/"
+REACT_APP_BASE_URL="http://52.42.15.246:8000"
 # Don't save development/local variables in this file. Use .env.development.local or equivalent
 # for that.
