--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "material-icons": "^0.2.3",
     "materialize-css": "^1.0.0-rc.2",
     "react": "^16.6.1",
+    "react-day-picker": "^7.2.4",
     "react-dom": "^16.6.1",
     "react-redux": "^5.1.1",
     "react-router-dom": "^4.3.1",
