updated .env file

--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 NODE_PATH=src/
+PORT=3001
 # Preprending with REACT_APP_ is important, 
 # source: https://facebook.github.io/create-react-app/docs/adding-custom-environment-variables
 REACT_APP_BASE_URL="http://52.42.15.246:8001"
