--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-redux": "^5.1.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
+    "react-star-ratings": "^2.3.0",
     "redux": "^4.0.1",
     "redux-axios-middleware": "^4.0.0",
     "socket.io-client": "^2.1.1"
